# transport/handler/project_member.go
@@ -3,6 +3,8 @@ package handler
 import (
 	"net/http"
 
+	"release-manager/pkg/responseerrors"
+	svcmodel "release-manager/service/model"
 	"release-manager/transport/model"
 	"release-manager/transport/util"
 )
@@ -30,4 +32,26 @@ func (h *Handler) deleteMember(w http.ResponseWriter, r *http.Request) {
 	}
 
 	w.WriteHeader(http.StatusNoContent)
+}
+
+func (h *Handler) updateMemberRole(w http.ResponseWriter, r *http.Request) {
+	var input model.UpdateProjectMemberRoleInput
+	if err := util.UnmarshalRequest(r, &input); err != nil {
+		util.WriteResponseError(w, responseerrors.NewBadRequestError().Wrap(err).WithMessage(err.Error()))
+		return
+	}
+
+	m, err := h.ProjectSvc.UpdateMemberRole(
+		r.Context(),
+		svcmodel.ProjectRole(input.ProjectRole),
+		util.ContextProjectID(r),
+		util.ContextUserID(r),
+		util.ContextAuthUserID(r),
+	)
+	if err != nil {
+		util.WriteResponseError(w, util.ToResponseError(err))
+		return
+	}
+
+	util.WriteJSONResponse(w, http.StatusOK, model.ToProjectMember(m))
 }
